--- a/self_description.html
+++ b/self_description.html
@@ -2,18 +2,49 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Карточка питона</title>
+    <style>
+        .leftimg {
+            float:left; /* Выравнивание по левому краю */
+            margin: 17px 17px 17px 0; /* Отступы вокруг картинки */
+                 }
+    </style>
 </head>
 <body>
  <span>
      <h1>Python Rossum</h1>
-     <img src="python-cover-icon-original.png" width="228" height="230">
+     <p>
+         <img src="python-cover-icon-original.png" width="428" height="430" class="leftimg">
+
+     </p>
  </span>
  <span>
-     <strong>Привет, я высокоуровневый язык программирования общего назначения, а это моя страничка</strong>
-     <p></p>
-     <p></p>
-     <p></p>
+     <strong>
+         Привет, я <a href="https://ru.wikipedia.org/wiki/Python">высокоуровневый язык программирования общего назначения</a>
+         , а это моя страничка.
+     </strong>
+     <hr>
+     <p>
+         Меня начал разрабатывать <mark>Гвидо Ван Россум</mark> еще в 1989 году
+     </p>
+     <p>
+         Я обладаю чётким и последовательным синтаксисом, продуманной <em>модульностью и масштабируемостью</em>,
+         благодаря чему исходный код написанных на мне программ <del>легко читаем</del>.
+     </p>
+     <hr>
+     <p>
+         У меня есть свои специфичные возможности и особенности:
+     <li>Специальные методы, управляющие жизненным циклом объекта: конструкторы, деструкторы.</li>
+     <li>Перегрузка операторов (всех, кроме is, '.', '=' и символьных логических).</li>
+     <li>Свойства (имитация поля с помощью функций).</li>
+     <li>Управление доступом к полям (эмуляция полей и методов, частичный доступ, и т. п.).</li>
+     <li>Методы для управления наиболее распространёнными операциями (истинностное значение, len(),
+         глубокое копирование, сериализация, итерация по объекту, …).</li>
+     <li>Полная интроспекция.</li>
+     <li>Классовые и статические методы, классовые поля.</li>
+     <li>Классы, вложенные в функции и классы.</li>
+     <li>Возможность модифицировать объекты во время исполнения программы.</li>
+     </p>
  </span>
 
 </body>
